--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 script:
 
 # Clone and setup civic-app
-  - git clone -b dev-deploy https://$GH_TOKEN@github.com/civicresourcegroup/civic-app.git
+  - git clone -b master https://$GH_TOKEN@github.com/civicresourcegroup/civic-app.git
   - cd civic-app
   - cp ../frontend.json config/frontend.json
   - cp ../backend.json config/backend.json
@@ -53,7 +53,7 @@ script:
   - make test-backend
 # run db-migrations
   - docker-compose run backend bash -c "cd app && ./manage.py migrate --noinput"
-  - make create-su
+  - docker-compose run backend bash -c "cd app && ./manage.py populate_base --force-count=1 --no-images"
 
 # run e2e tests
   - docker-compose up -d backend
