--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 #### end of docker-compose installation
 
-script:
+install:
 
 # Clone and setup civic-app
   - git clone -b master https://$GH_TOKEN@github.com/civicresourcegroup/civic-app.git
@@ -30,7 +30,7 @@ script:
 
 # Download backend repositories
   - make clone-backend-app
-  - cp config/local_settings.py backend/civic-container/app/civic/settings/local_settings.py
+  - cp ../local_settings.py backend/civic-container/app/civic/settings/local_settings.py
   - mkdir backend/addons
   - make clone-backend-addons
 ##########
@@ -47,13 +47,18 @@ script:
 # Build docker images
   - sudo docker-compose build
 
+before_script:
+
 # run backend tests
   - docker-compose up -d db
   - docker-compose up -d elasticsearch
-  - make test-backend
-# run db-migrations
-  - docker-compose run backend bash -c "cd app && ./manage.py migrate --noinput"
-  - docker-compose run backend bash -c "cd app && ./manage.py populate_base --force-count=1 --no-images"
+  - docker-compose run --entrypoint "/bin/bash -c" backend "make -C /home/civic/app test"
+# run preparations db-migrations
+  - docker-compose run --entrypoint "/bin/bash -c" backend "cd app && ./manage.py migrate --noinput"
+  - docker-compose run --entrypoint "/bin/bash -c" backend "cd app && ./manage.py collectstatic --noinput"
+  - docker-compose run --entrypoint "/bin/bash -c" backend "cd app && ./manage.py populate_base --force-count=1 --no-images"
+
+script:
 
 # run e2e tests
   - docker-compose up -d backend
@@ -62,15 +67,21 @@ script:
 
 after_failure:
 
+
+
+# define built image names:
+  - export BACKEND_IMAGE=$DOCKERHUB_IMAGE_NAME:backend-branch-$TRAVIS_BRANCH
+  - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-branch-$TRAVIS_BRANCH
+
 # Push docker images to registry
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker tag civicapp_backend $DOCKERHUB_IMAGE_NAME:backend
-  - docker tag civicapp_civic $DOCKERHUB_IMAGE_NAME:civic
-  - docker push $DOCKERHUB_IMAGE_NAME:backend
-  - docker push $DOCKERHUB_IMAGE_NAME:civic
+  - docker tag civicapp_backend $BACKEND_IMAGE
+  - docker tag civicapp_civic $CIVIC_IMAGE
+  - docker push $BACKEND_IMAGE
+  - docker push $CIVIC_IMAGE
 
 # deploy on the server
   - cd config/servers
-  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then source ci.sh ; else source dev.sh ; fi
+  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo "Deploy to ci " && source ci.sh ; elif [[ "$TRAVIS_BRANCH" == "dev" ]]; then echo "Deploy to dev" && source dev.sh ; else echo "Deploy skipped" ; fi
   - cd ../../deploy_scripts
-  - cat deploy_production.sh | ssh target
+  - cat deploy_production.sh | envsubst | ssh target
