--- a/.travis.yml
+++ b/.travis.yml
@@ -50,19 +50,22 @@ install:
 # Build docker images
   - sudo docker-compose build
 
-script:
+before_script:
 
-# run backend tests
   - docker-compose up -d db
   - docker-compose up -d elasticsearch
-  - docker-compose run --entrypoint "/bin/bash -c" backend "make -C /home/civic/app test"
+
+# wait until db is ready
+  - source ./deploy_scripts/wait_for_db.sh
+
 # run preparations db-migrations
   - docker-compose run --entrypoint "/bin/bash -c" backend "cd app && ./manage.py migrate --noinput"
   - docker-compose run --entrypoint "/bin/bash -c" backend "cd app && ./manage.py collectstatic --noinput"
   - docker-compose run --entrypoint "/bin/bash -c" backend "cd app && ./manage.py populate_base --force-count=1 --no-images"
 
-#script:
-
+script:
+# run backend tests
+  - docker-compose run --entrypoint "/bin/bash -c" backend "make -C /home/civic/app test"
 # run e2e tests
   - docker-compose up -d backend
   - docker-compose up -d civic
