--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 #### end of docker-compose installation
 
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+
 install:
 
 # Clone and setup civic-app
@@ -82,7 +84,6 @@ after_failure:
   - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-build-$TRAVIS_BUILD_NUMBER
 
 # Push docker images to registry
-  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker tag civicapp_backend $BACKEND_IMAGE
   - docker tag civicapp_civic $CIVIC_IMAGE
   - docker push $BACKEND_IMAGE
@@ -90,12 +91,12 @@ after_failure:
 
 after_success:
 
-# define built image names:
+# define built images names:
   - export BACKEND_IMAGE=$DOCKERHUB_IMAGE_NAME:backend-build-$TRAVIS_BUILD_NUMBER
   - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-build-$TRAVIS_BUILD_NUMBER
 
 # Push docker images to registry
-  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+
   - docker tag civicapp_backend $BACKEND_IMAGE
   - docker tag civicapp_civic $CIVIC_IMAGE
   - docker push $BACKEND_IMAGE
