--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,7 @@ before_script:
 script:
 # run backend tests
   - docker-compose run --entrypoint "/bin/bash -c" backend "make -C /home/civic/app test"
+
 # run e2e tests
   - docker-compose up -d backend
   - docker-compose up -d civic
@@ -80,8 +81,8 @@ script:
 after_failure:
 
 # define built image names:
-  - export BACKEND_IMAGE=$DOCKERHUB_IMAGE_NAME:backend-build-$TRAVIS_BUILD_NUMBER
-  - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-build-$TRAVIS_BUILD_NUMBER
+  - export BACKEND_IMAGE=$DOCKERHUB_IMAGE_NAME:backend-travisbuild-$TRAVIS_BUILD_NUMBER
+  - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-travisbuild-$TRAVIS_BUILD_NUMBER
 
 # Push docker images to registry
   - docker tag civicapp_backend $BACKEND_IMAGE
