--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 #### end of docker-compose installation
-
+  - docker pull civicubertree/civic-container:branch-master
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 
 install:
@@ -80,8 +80,8 @@ script:
 after_failure:
 
 # define built image names:
-  - export BACKEND_IMAGE=$DOCKERHUB_IMAGE_NAME:backend-build-$TRAVIS_BUILD_NUMBER
-  - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-build-$TRAVIS_BUILD_NUMBER
+  - export BACKEND_IMAGE=$DOCKERHUB_IMAGE_NAME:backend-travisbuild-$TRAVIS_BUILD_NUMBER
+  - export CIVIC_IMAGE=$DOCKERHUB_IMAGE_NAME:civic-travisbuild-$TRAVIS_BUILD_NUMBER
 
 # Push docker images to registry
   - docker tag civicapp_backend $BACKEND_IMAGE
