--- a/local_config.json
+++ b/local_config.json
@@ -2,14 +2,5 @@
   "apiUrl": "/api/admin/v1",
   
   "debugInfoEnabled": true,
-  "build_number": "$BUILD_NUMBER",
-  "modules": [
-    "civic.admin",
-    "civic.organizations",
-    "civic.blogs",
-    "civic.venues",
-    "civic.pages",
-    "civic.events",
-    "civic.sc"
-  ]
+  "build_number": "$BUILD_NUMBER"
 }
