fix local config

--- a/local_config.json
+++ b/local_config.json
@@ -2,5 +2,10 @@
   "apiUrl": "/api/admin/v1",
   
   "debugInfoEnabled": true,
-  "build_number": "$BUILD_NUMBER"
+  "build_number": "$BUILD_NUMBER",
+    "modules": [
+    "civic.admin",
+    "civic.organizations",
+    "civic.venues"
+  ]
 }
